Scale AboutMe bottom white space fix

--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -52,7 +52,6 @@ body{
 	src: url("../fonts/Lexend/LexendDeca-VariableFont_wght.ttf");
 }
 html,body{
-  background-color: red;
   width: 100vw;
   height: 100vh;
 }
@@ -221,7 +220,6 @@ a:hover, a:active { cursor: pointer; text-decoration: none; color:black;}
   font-size: 48px;
   border-bottom: #0D0E11 solid 3px;
   width: 300px;
-  margin-bottom: 20px;
 }
 
 .App #Aboutme #about-me-sub-header{
@@ -311,7 +309,6 @@ a:hover, a:active { cursor: pointer; text-decoration: none; color:black;}
     font-family: 'poly';
     font-size: 40px;
     border-bottom: #0D0E11 solid 3px;
-    margin-bottom: 10px;
   }
 
   .App #Aboutme #about-me-sub-header{
@@ -363,7 +360,6 @@ a:hover, a:active { cursor: pointer; text-decoration: none; color:black;}
     font-family: 'poly';
     font-size: 20px;
     border-bottom: #0D0E11 solid 3px;
-    margin-bottom: 10px;
   }
 
   .App #Aboutme #about-me-sub-header{
